refactor: 메서드 이름 명확히 수정